@@ -3079,6 +3079,39 @@ ACE_OS::thr_min_stack (void)
 #endif /* ACE_HAS_THREADS */
 }
 
+ACE_INLINE ssize_t
+ACE_OS::thr_id (char buffer[], size_t buffer_length)
+{
+#if defined (ACE_WIN32)
+#if defined (ACE_HAS_SNPRINTF)
+  return_OS::snprintf (buffer,
+                       buffer_length,
+                       "u",
+                       static_cast <unsigned> (ACE_Thread::self ()));
+#else
+  ACE_UNUSED_ARG (buffer_length);
+  return_OS::sprintf (buffer,
+                      "u",
+                      static_cast <unsigned> (ACE_Thread::self ()));
+}
+#endif /* ACE_HAS_SNPRINTF */
+#else
+  ACE_hthread_t t_id;
+  ACE_OS::thr_self (t_id);
+#if defined (ACE_HAS_SNPRINTF)
+  return ACE_OS::snprintf (buffer,
+                           buffer_length,
+                           "%lu",
+                           (unsigned long) t_id);
+#else
+  ACE_UNUSED_ARG (buffer_length);
+  return ACE_OS::sprintf (buffer,
+                          "%lu",
+                          (unsigned long) t_id);
+#endif /* ACE_HAS_SNPRINTF */
+#endif /* WIN32 */
+}
+
 ACE_INLINE ACE_thread_t
 ACE_OS::thr_self (void)
 {
